--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
             window.location.href = "https://apps.apple.com/app/id6755478281";
         } else {
-            window.location.href = "https://proofileph.com/"; // optional fallback
+            window.location.href = "https://yourwebsite.com"; // optional fallback
         }
     </script>
 </head>
@@ -19,3 +19,4 @@
     <p>If you are not redirected automatically, <a href="https://yourwebsite.com">click here</a>.</p>
 </body>
 </html>
+
